--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ project.ext.lwjglVersion = "3.2.3"
 project.ext.jomlVersion = "1.10.1"
 project.ext.lwjglNatives = "natives-windows"
 
+sourceCompatibility = 11
+
 repositories {
     mavenCentral()
 }
